--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -957,7 +957,7 @@
             "type": "testimonial",
             "settings": {
               "testimonial": "<p>E2 energy is by far the best energy supplement me or my wife have taken. We have both extremely hectic schedules and are also very active and workout daily. This product takes the effort out and gives us both this incredible boost of energy.<\/p>",
-              "image": "shopify:\/\/shop_images\/E2_Focus_Testimonial_a9c81595-3aff-49e5-9f1b-dae30fa95f3a.jpg",
+              "image": "shopify:\/\/shop_images\/E2_Focus_Testimonial.jpg",
               "author": "Nate R."
             }
           }
